--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,4 +1,12 @@
-<h1>Dashboard</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <h1>Dashboard</h1>
 <a href="/dashboard/add">Add Transaction</a>
 <table>
   <thead>
@@ -27,3 +35,6 @@
     <% }) %>
   </tbody>
 </table>
+
+</body>
+</html>
