--- a/views/editTransaction.ejs
+++ b/views/editTransaction.ejs
@@ -1,4 +1,12 @@
-<h1>Edit Transaction</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <h1>Edit Transaction</h1>
 <form action="/dashboard/edit/<%= transaction._id %>" method="POST">
   <label for="type">Type:</label>
   <select id="type" name="type" required>
@@ -13,3 +21,6 @@
   <input type="text" id="description" name="description" value="<%= transaction.description %>">
   <button type="submit">Update Transaction</button>
 </form>
+
+</body>
+</html>
