--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,4 +1,12 @@
-<h1>Register</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <h1>Register</h1>
 <form action="/register" method="POST">
   <label for="username">Username:</label>
   <input type="text" id="username" name="username" required>
@@ -8,3 +16,5 @@
   <input type="password" id="password" name="password" required>
   <button type="submit">Register</button>
 </form>
+</body>
+</html>
