--- a/views/addTransaction.ejs
+++ b/views/addTransaction.ejs
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  
+</body>
+</html>
 <h1>Add Transaction</h1>
 <form action="/users/<%= user._id %>/transactions/add" method="POST">
   <label for="type">Type:</label>
