--- a/views/editTransaction.ejs
+++ b/views/editTransaction.ejs
@@ -12,7 +12,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: #f4f4f4;
+      background-color: #343de7;
       font-family: Arial, sans-serif;
     }
     .edit-transaction-container {
