--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,10 +12,10 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: #f4f4f4;
+      background-color: #343de7;
     }
     .login-container {
-      background-color: #fff;
+      background-color: #ffffff;
       padding: 2rem;
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
