--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,7 +12,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: #f4f4f4;
+      background-color: #2a4bf0;
     }
     .register-container {
       background-color: #fff;
