--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -8,12 +8,12 @@
   <style>
     body, html {
       height: 100%;
-      width: 125%;
+      width: 100%;
       margin: 0;
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: #f4f4f4;
+      background-color: #343de7;
       font-family: Arial, sans-serif;
     }
     .dashboard-container {
@@ -53,9 +53,11 @@
     }
     .transactions-list li p {
       margin: 0;
+    
     }
     .transactions-list li .amount {
       font-weight: bold;
+ 
       
     }
     .add-transaction-btn {
@@ -80,6 +82,8 @@
       padding: 0.5rem 1rem;
       cursor: pointer;
       text-decoration: none;
+      position: fixed;
+
       
     }
     .edit-btn:hover {
